k8s/backend-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: roulette-backend

  ports:
    - port: 8888        #svc Port
      targetPort: 8888  #pods port

  type: ClusterIP
